Fix edit form height when existing content overflows. Add disabled indicator to edit save button

--- a/DiplomacyBook/app/assets/stylesheets/posts.scss
+++ b/DiplomacyBook/app/assets/stylesheets/posts.scss
@@ -174,6 +174,15 @@
     background: #365899;
 }
 
+#save-disabled {
+    opacity: 30%;
+    cursor: not-allowed;
+}
+
+#save-disabled:hover {
+    background: #4267b2;
+}
+
 .posts-container {
     display: flex;
     flex-direction: column;
